# app/Http/Controllers/Api/AuthController.php
@@ -1,36 +1,116 @@
 <?php
-use App\Application;
-class AuthController extends Controller
-{
-    public function authenticateApp(Request $request)
-    {
-        $credentials = base64_decode(
-            Str::substr($request->header('Authorization'), 6)
-        );
 
+namespace App\Http\Controllers\Api;
+use Tymon\JWTAuth\Facades\JWTAuth;
+use Tymon\JWTAuth\Exceptions\JWTException;
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use Tymon\JWTAuth\Exceptions\TokenExpiredException;
+use Tymon\JWTAuth\Exceptions\TokenInvalidException;
+use App\User;
+
+class AuthController extends Controller {
+    /**
+     * API Login, on success return JWT Auth token
+     *
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function login(Request $request) {
+        $credentials = $request->only('email', 'password');
         try {
-            list($appKey, $appSecret) = explode(':', $credentials);
-
-            $app = Application::whereKeyAndSecret($appKey, $appSecret)->firstOrFail();
-        } catch (\Throwable $e) {
-            return response('invalid_credentials', 400);
+            // attempt to verify the credentials and create a token for the user
+            if (! $token = JWTAuth::attempt($credentials)) {
+                return response()->json(['error' => 'invalid_credentials'], 401);
+            }
+        } catch (JWTException $e) {
+            // something went wrong whilst attempting to encode the token
+            return response()->json(['error' => 'could_not_create_token'], 500);
         }
-
-        if (! $app->is_active) {
-            return response('app_inactive', 403);
-        }
-
-        return response([
-            'token_type' => 'Bearer',
-            'access_token' => $app->generateAuthToken(),
+        // all good so return the token
+        return response()->json(compact('token'),200);
+    }
+    /**
+     * Log out
+     * Invalidate the token, so user cannot use it anymore
+     * They have to relogin to get a new token
+     *
+     * @param Request $request
+     */
+    public function logout(Request $request) {
+        $this->validate($request, [
+            'token' => 'required'
         ]);
+
+        JWTAuth::invalidate($request->input('token'));
     }
 
-    public function authenticateUser(Request $request){
+    // somewhere in your controller
+    public static function getAuthenticatedUser()
+    {
+        try {
 
+            if (! $user = JWTAuth::parseToken()->authenticate()) {
+                return response()->json(['user_not_found'], 404);
+            }
+
+        } catch (TokenExpiredException $e) {
+
+            return response()->json(['token_expired'], $e->getStatusCode());
+
+        } catch (TokenInvalidException $e) {
+
+            return response()->json(['token_invalid'], $e->getStatusCode());
+
+        } catch (JWTException $e) {
+
+            return response()->json(['token_absent'], $e->getStatusCode());
+
+        }
+        unset($user->password);
+        // the token is valid and we have found the user via the sub claim
+        return response()->json(compact('user'));
     }
 
-    public function logoutUser(Request $request){
+    public function signup(Request $request) {
+        $name = $request->input('name');
+        $email = $request->input('email');
+        $phone = $request->input('phone');
+        $password = $request->input('password');
+
+
+        /**************************************/
+        /*TODO*/
+        /*Валидация*/
+        /*******************************/
+
+         $user = new User();
+         $user->name = $name;
+         $user->email = $email;
+         $user->sourname = $request->input('sourname');
+         $user->phone = $request->input('phone');
+         $user->password = bcrypt($request->input('password'));
+         $user->save();
+
+        // all good so return the token
+        $credentials = $request->only('email', 'password');
+        try {
+            // attempt to verify the credentials and create a token for the user
+            if (! $token = JWTAuth::attempt($credentials)) {
+                return response()->json(['error' => 'invalid_credentials'], 401);
+            }
+        } catch (JWTException $e) {
+            // something went wrong whilst attempting to encode the token
+            return response()->json(['error' => 'could_not_create_token'], 500);
+        }
+        // all good so return the token
+        return response()->json(compact('token'),200);
+    }
+
+
+
+    protected function create(array $data)
+    {
 
     }
 }
